第二题文档

--- a/第二题技术文档.md
+++ b/第二题技术文档.md
@@ -4,25 +4,29 @@
 
 ## 2.目录结构
 
-├── app<br/>
-│   ├── http<br/>
-│   │   └── httpServer.go<br/>
-│   └── main.go<br/>
-├── go.mod<br/>
-├── go.sum<br/>
-└── internal<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    ├── ctrl<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    │   └── CalculateController.go<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    ├── handler<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    │   ├── CalculatoHandler.go<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    │   └── CalculatoHandler_test.go<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    ├── model<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    │   └── Stack.go<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    ├── router<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    │   └── CalculatoRouter.go<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    └── service<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       ├── ValStrService.go<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        └── ValStrService_test.go<br/>
+```
+├── app
+│   ├── http
+│   │   └── httpServer.go
+│   └── main.go
+├── go.mod
+├── go.sum
+└── internal
+    ├── ctrl
+    │   └── CalculateController.go
+    ├── handler
+    │   ├── CalculatoHandler.go
+    │   └── CalculatoHandler_test.go
+    ├── model
+    │   └── Stack.go
+    ├── router
+    │   └── CalculatoRouter.go
+    └── service
+        ├── ValStrService.go
+        └── ValStrService_test.go
+```
+
+
 
 ## 3.代码逻辑分层
 
