第二题错误处理修改以及文档修改

--- a/第二题技术文档.md
+++ b/第二题技术文档.md
@@ -43,11 +43,20 @@
 
 栈设计
 
-| 内容           | 数据库 | field  | 类型    |
-| -------------- | ------ | ------ | ------- |
-| 栈最大存放个数 | 无     | MaxTop | int     |
-| 栈顶           | 无     | Top    | int     |
-| 模拟栈的数组   | 无     | Arr    | [20]int |
+| 内容         | 数据库 | field | 类型  |
+| ------------ | ------ | ----- | ----- |
+| 栈顶         | 无     | Top   | int   |
+| 模拟栈的数组 | 无     | Arr   | slice |
+
+返回结果设计
+
+| 内容     | 数据库 | field | 类型        |
+| -------- | ------ | ----- | ----------- |
+| 状态码   | 无     | Code  | string      |
+| 返回消息 | 无     | Msg   | string      |
+| 返回结果 | 无     | Data  | interface{} |
+
+
 
 ## 5.接口设计
 
@@ -88,18 +97,21 @@ POST
 
 #### 响应状态码
 
-| 状态码 | 说明 |
-| ------ | ---- |
-| 201    | 错误 |
-| 200    | 成功 |
+| 状态码 | 说明                                   |
+| ------ | -------------------------------------- |
+| 201    | 开头和结尾不允许使用操作符，不符合规范 |
+| 202    | 操作符连续，不符合规范                 |
+| 203    | 存在非法字符，请重新输入               |
+| 204    | 请输入表达式                           |
+| 200    | 成功                                   |
 
 #### 响应消息说明
 
-| 字段    | 说明                                    |
-| ------- | --------------------------------------- |
-| code    | 响应状态码                              |
-| data    | 响应数据                                |
-| message | OK(响应成功)，ERROR(请求或者响应有错误) |
+| 字段    | 说明       |
+| ------- | ---------- |
+| code    | 响应状态码 |
+| data    | 响应数据   |
+| message | 响应消息   |
 
 
 
