第二题技术文档更新请求路径

--- a/第二题技术文档.md
+++ b/第二题技术文档.md
@@ -64,11 +64,13 @@
 
 #### 接口功能
 
-根据输入的稀有度参数、当前解锁阶段参数和cvc参数，获取符合稀有度、cvc且已解锁的所有士兵数据并返回。
+根据输入表达式计算出正确的结果
 
 #### HTTP请求方式
 
 POST
+
+127.0.0.1:8000/calculator
 
 #### 请求参数
 
